# GEDS

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt
src/rust/: CMakeLists.txt  Cargo.toml  README.md  build.rs
src/rust/src/: GEDSFileWrapper.cpp  GEDSFileWrapper.h  GEDSWrapper.cpp  GEDSWrapper.h  lib.rs
wasmtime/cranelift/codegen/isle_generated_code/: isle_aarch64.rs  isle_opt.rs  isle_pulley_shared.rs  isle_riscv64.rs  isle_s390x.rs  isle_x64.rs
wasmtime/crates/cli-flags/src/: lib.rs
wasmtime/crates/geds-dummy/: Cargo.toml
wasmtime/crates/geds-dummy/src/: lib.rs
wasmtime/crates/wasi/: Cargo.toml
wasmtime/crates/wasi-common/src/tokio/: file.rs
wasmtime/crates/wasi/src/: ctx.rs  filesystem.rs  preview1.rs  write_stream.rs
wasmtime/crates/wasi/src/host/: filesystem.rs
wasmtime/crates/wasi/src/host/filesystem/: sync.rs
wasmtime/microbenchmarks/: CMakeLists.txt
wasmtime/microbenchmarks/geds/: CMakeLists.txt
wasmtime/microbenchmarks/geds/src/: main.c
wasmtime/microbenchmarks/redis/: CMakeLists.txt
wasmtime/microbenchmarks/redis/src/: main.cpp
wasmtime/microbenchmarks/sqlite/: CMakeLists.txt
wasmtime/microbenchmarks/sqlite/include/: sqlite3ext.h
wasmtime/microbenchmarks/sqlite/lib/wasm32-wasi/pkgconfig/: sqlite3.pc
wasmtime/microbenchmarks/sqlite/src/: main.cpp
wasmtime/src/commands/: run.rs
